fix affiliations z-index, simplify scroll spy template, fix header IDs in full text, add better sections helpers, WIP articleSidebar buttons

--- a/client/new style/modules/_layout.scss
+++ b/client/new style/modules/_layout.scss
@@ -66,8 +66,8 @@ $sub-navbar-padding: 10px;
 
 
 .sidebar { z-index: 3; }
-.navigation { z-index: 6; }
-.sub-nav { z-index: 1; }
+.navigation { z-index: 7; }
+.sub-nav { z-index: 6; }
 
 
 /** Navigation | Top Nav
